--- a/frontend/scss/_day.scss
+++ b/frontend/scss/_day.scss
@@ -35,8 +35,17 @@ $border-radius: 2px;
     align-items: flex-end;
     height: 100%;
     background-color: $free;
-    border-right: 1px solid white;
+    margin: 0 0.5px;
     border-radius: $border-radius;
+
+    &--selected {
+      box-shadow: 0 0 0 4px #1781b7;
+      z-index: 2;
+
+      &::before {
+        font-weight: bold;
+      }
+    }
 
     &:hover {
       cursor: pointer;
@@ -49,6 +58,17 @@ $border-radius: 2px;
 
         &--not-available {
           background-color: color.adjust($not-available, $lightness: -30%);
+          background-image: linear-gradient(
+            135deg,
+            #ccc 25%,
+            #fff 25%,
+            #fff 50%,
+            #ccc 50%,
+            #ccc 75%,
+            #fff 75%,
+            #fff 100%
+          );
+          background-size: 1em 1em;
         }
       }
     }
