--- a/core/templates/core/booking_detail.html
+++ b/core/templates/core/booking_detail.html
@@ -2,7 +2,7 @@
 
 {% block body %}
   <h1>So far so good.</h1>
-  <h2>You're booking code is: <tt>{{ booking }}</tt></h2>
+  <h2>Your booking code is: <tt>{{ booking }}</tt></h2>
   <p>Date: {{ booking.date }}</p>
   <p>Duration: {{ booking.start }} &mdash; {{ booking.end }}</p>
   <p>Location: {{ booking.gym }}</p>
