--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -1,11 +1,14 @@
 @use "day";
+@use "booking-form";
 
-body {
-  margin: auto;
-  width: 1024px;
-  text-align: center;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-background-primary: hsl(240, 6.2%, 15.9%);
+    --color-text: hsla(0, 0%, 100%, 0.6);
+  }
 }
 
-form {
-  margin: 1em 0;
+body {
+  background-color: var(--color-background-primary);
+  color: var(--color-text);
 }
