--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -3,14 +3,18 @@
 <!doctype html>
 <html lang="en">
 <head>
+  {% block head %}
   <meta charset="utf-8">
   <title>{% block title %}bouldertime.eu{% endblock %}</title>
   <meta name="description" content="{% block meta_description %}{% trans "Save your spot for going bouldering" %}{% endblock %}">
   <link rel="stylesheet" href="{% static "index.css" %}">
+  {% endblock %}
 </head>
 
 <body>
   {% block body %}{% endblock %}
+  {% block scripts %}
   <script src="{% static "index.js" %}"></script>
+  {% endblock %}
 </body>
 </html>
